mail server added

--- a/FrontendUI/appsettings.json
+++ b/FrontendUI/appsettings.json
@@ -5,15 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MailSettings": {
-    "Mail": "reply@stereo8.ir",
-    "DisplayName": "وب سایت استریو 8",
-    "Password": "$2hj47cQ8",
-    "Host": "webmail.stereo8.ir",
-    "Port": 25
-  },
   "frontendApiAddress": "http://localhost:8075/FrontendApi/api",
+  "mailApiAddress": "http://localhost:8075/CommunicationApi/api",
   "frontendApiAddressDebug": "https://localhost:44352/api",
+  "mailApiAddressDebug": "https://localhost:44374/api",
   "ApplicationName": "stereo8.ir",
   "ApplicationPersianName": "استریو 8",
   "AllowedHosts": "*"
