--- a/CommunicationApi/CommunicationApi.csproj
+++ b/CommunicationApi/CommunicationApi.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infra.Bus\Infra.Bus.csproj" />
     <ProjectReference Include="..\Infra.SMTP\Infra.SMTP.csproj" />
   </ItemGroup>
 
