--- a/CommunicationApi/appsettings.json
+++ b/CommunicationApi/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "MailSettings": {
-    "Mail": "reply@stereo8.ir",
+    "Mail": "YOUR_MAIL_SERVER",
     "DisplayName": "وب سایت استریو 8",
-    "Password": "$2hj47cQ8",
-    "Host": "webmail.stereo8.ir",
+    "Password": "MAIL_SERVER_PASSWORD",
+    "Host": "MAIL_SERVER_HOST",
     "Port": 25
   },
   "AllowedHosts": "*"
