--- a/Infra.IdentityServer/appsettings.json
+++ b/Infra.IdentityServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "IdentityDb": "Server=.\\MSSQL2017;Database=AudioShopIdentityDb;User Id=sa;Password=safa@123;TrustServerCertificate=true;",
-    "ApplicationDb": "Server=.\\MSSQL2017;Database=AudioShopMSDb;User Id=sa;Password=safa@123;TrustServerCertificate=true;"
+    "IdentityDb": "CONNECTION_STRING",
+    "ApplicationDb": "CONNECTION_STRING"
   },
   "Logging": {
     "LogLevel": {
